Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87526

QML HorizontalHeaderView does not show up if rowcount in Tablemodel is 0

XMLWordPrintable

    • 27c254203b3e7dd6d3a4445feb205fbe98c32d30 (qt/qtdeclarative/dev) 6d852a7e65d56519f1d73cd853430946f5526f8e (qt/qtdeclarative/6.0) 1241e4f3c3ec010ae121f5d56c3e9405ec43231f (qt/qtdeclarative/5.15)

      If HorizontalHeaderView is used in conjunction with Tableview and c++-QAbstractTableModel the header should be driven by headerData() of the model. That works fine except if the rowCount of the model becomes 0. In that case, the header is not shown at all.

      The horizontal header should be shown unless the columnCount is 0, please refer to the attached sample.

        1. qtbug87526.zip
          3 kB
          Shveta Mittal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            shmittal Shveta Mittal
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes